<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/layout_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <cn.ezandroid.ezfilter.core.environment.SurfaceFitView
                android:id="@+id/mRenderView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPlayPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_current_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/default_position"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/default_position"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <SeekBar
                android:id="@+id/seekbar_media"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_duration"
                app:layout_constraintStart_toEndOf="@id/tv_current_position" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="16dp"
        android:max="100"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_video" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekbar"
        tools:text="100" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_normal" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_vintage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vintage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_portrait" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dust" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_vignette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vignette" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_mask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_mask" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_light_leak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_light_leak" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_border" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_brightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_brightness" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_contrast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_contrast" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_saturation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_saturation" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_high_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hight_light" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_shadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_shadow" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_date" />
        </LinearLayout>

    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>